--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-﻿
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Project</title>
+</head>
+<body>
+    <h1>Test Project</h1>
+    <form id="dataForm">
+        <input type="text" id="dataInput" placeholder="Enter data">
+        <button type="submit">Submit</button>
+    </form>
+    <div id="output"></div>
+    <script src="script.js"></script>
+</body>
+</html>
