--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +7,7 @@
 </head>
 <body>
     <h1>Test Project</h1>
-    <form id="dataForm">
-        <input type="text" id="dataInput" placeholder="Enter data">
-        <button type="submit">Submit</button>
-    </form>
-    <div id="output"></div>
+    <div id="dataOutput"></div>
     <script src="script.js"></script>
 </body>
 </html>
