--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test Page</title>
+    <title>YouTube Links</title>
 </head>
 <body>
-    <a href="file:///path_to_script_folder/readLinks.js?pasteURL=https://www.youtube.com/@pravdachurch/videos">Загрузить ссылки</a>
+    <h1>Получение ссылок на YouTube видео</h1>
+    <p>Для получения ссылок на видео YouTube, нажмите на кнопку ниже:</p>
+    <a href="https://ruyriy.github.io/DataBase/readLinks.js?pasteURL=https://www.youtube.com/@pravdachurch/videos" target="_blank">Загрузить ссылки</a>
+
+    <!-- Здесь можете добавить другой контент вашей страницы -->
 
     <script src="readLinks.js"></script>
 </body>
